fix(core): `Textarea` fix line breaks in disabled/readonly state (#3833)

--- a/projects/core/components/primitive-textfield/textfield/textfield.style.less
+++ b/projects/core/components/primitive-textfield/textfield/textfield.style.less
@@ -29,7 +29,7 @@
 }
 
 textarea:host {
-    white-space: normal;
+    white-space: pre-wrap;
 
     :host-context(tui-text-area._ios) {
         padding-left: 0.8125rem; // compensation of unkillable padding in mobile safari
